--- a/apps/librespeed/dev/goss.yaml
+++ b/apps/librespeed/dev/goss.yaml
@@ -1,10 +1,10 @@
 ---
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#process
-# process:
-#   httpd:
-#     running: true
+process:
+  httpd:
+    running: true
 
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#http
 http:
-  http://localhost:80:
+  http://localhost:8080:
     status: 200
