does debugging break stuff?
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/kapowarr/dev/Dockerfile
+++ b/apps/kapowarr/dev/Dockerfile
@@ -27,7 +27,7 @@ RUN pip3 install -r requirements.txt
 COPY --from=cloner /source/. .
 
 # Debugging
-COPY apps/kapowarr/dev/getcomics.py ./backend/implementations/getcomics.py
+# COPY apps/kapowarr/dev/getcomics.py ./backend/implementations/getcomics.py
 
 EXPOSE 5656
 
