--- a/apps/actual-http-api/ci/goss.yaml
+++ b/apps/actual-http-api/ci/goss.yaml
@@ -1,16 +1,17 @@
 ---
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#process
 process:
-  Cleanuparr:
+  node:
     running: true
 
 # # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#port
 # port:
 #   # https://github.com/aelsabbahy/goss/issues/149
-#   tcp6:9705:
-# #     listening: true  
+#   tcp6:5452:
+#     listening: true
 
-# http:
-#   http://localhost:11011:
-#     status: 200
-#     timeout: 30000
+# https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#http
+http:
+  http://localhost:5007:
+    status: 200
+    timeout: 5000
