--- a/apps/actual-http-api/Dockerfile
+++ b/apps/actual-http-api/Dockerfile
@@ -34,6 +34,8 @@ ENV NODE_ENV=production
 
 # We need this to exist for goss testing
 ENV ACTUAL_SERVER_URL=http://bogus:1234
+ENV ACTUAL_SERVER_PASSWORD=bogus
+ENV API_KEY=bogus
 
 EXPOSE ${PORT}
 
