--- a/apps/calibre-web-automated/Dockerfile
+++ b/apps/calibre-web-automated/Dockerfile
@@ -7,7 +7,7 @@ ARG VERSION
 RUN apk update && apk upgrade && \
     apk add --no-cache git
 
-RUN git clone -b $VERSION https://github.com/crocodilestick/Calibre-Web-Automated.git /source
+RUN git clone -b V${VERSION} https://github.com/crocodilestick/Calibre-Web-Automated.git /source
 
 
 # syntax=docker/dockerfile:1
