--- a/apps/youtubio/Dockerfile
+++ b/apps/youtubio/Dockerfile
@@ -8,9 +8,19 @@ RUN apk update && apk upgrade && \
     apk add --no-cache git
 
 RUN git clone  https://github.com/xXCrash2BomberXx/YouTube-Stremio.git /source
+
 # Use an official Node.js runtime as a parent image
 # Using the Long-Term Support (LTS) version is a good practice
-FROM node:18-slim
+FROM node:22-slim
+
+# Install Python and yt-dlp
+# We switch to root to perform these operations and then switch back to the node user.
+USER root
+RUN apt-get update && \
+    apt-get install -y python3 python3-pip && \
+    pip3 install yt-dlp --break-system-packages && \
+    rm -rf /var/lib/apt/lists/*
+USER node
 
 # Set the working directory in the container
 WORKDIR /usr/src/app
