--- a/apps/topolvm-with-sidecar/Dockerfile
+++ b/apps/topolvm-with-sidecar/Dockerfile
@@ -7,9 +7,11 @@ ARG VERSION
 RUN apk update && apk upgrade && \
     apk add --no-cache git
 
-RUN git clone -b v$VERSION https://github.com/topolvm/topolvm.git /source && \
-    copy apps/topolvm/disable-nodepublishvolume-lock.patch /source/ && \
-    cd /source && \
+RUN git clone -b v$VERSION https://github.com/topolvm/topolvm.git /source
+
+COPY apps/topolvm/disable-nodepublishvolume-lock.patch /source/
+
+RUN cd /source && \
     git apply disable-nodepublishvolume-lock.patch && \
     rm disable-nodepublishvolume-lock.patch
 
