--- a/apps/tooling/Dockerfile
+++ b/apps/tooling/Dockerfile
@@ -60,10 +60,15 @@ RUN apt-get update && apt-get install -y \
 	chmod 755 /usr/local/bin/rclone
 
 # Setup psql 17 client, which is not in ubuntu:focal/jammy yet:
-RUN curl -fSsL https://www.postgresql.org/media/keys/ACCC4CF8.asc | gpg --dearmor | tee /usr/share/keyrings/postgresql.gpg > /dev/null && \
-	echo deb [arch=amd64,arm64,ppc64el signed-by=/usr/share/keyrings/postgresql.gpg] http://apt.postgresql.org/pub/repos/apt/ focal-pgdg main | tee -a /etc/apt/sources.list.d/postgresql.list && \
-	apt-get update && \
-	apt -y install postgresql-client-17
+# RUN curl -fSsL https://www.postgresql.org/media/keys/ACCC4CF8.asc | gpg --dearmor | tee /usr/share/keyrings/postgresql.gpg > /dev/null && \
+# 	echo deb [arch=amd64,arm64,ppc64el signed-by=/usr/share/keyrings/postgresql.gpg] http://apt.postgresql.org/pub/repos/apt/ focal-pgdg main | tee -a /etc/apt/sources.list.d/postgresql.list && \
+# 	apt-get update && \
+# 	apt -y install postgresql-client-17
+
+RUN apt-get update && apt-get install -y wget ca-certificates gnupg
+RUN echo "deb http://deb.debian.org/debian bookworm main" >> /etc/apt/sources.list && \
+    apt-get update && apt-get install -y postgresql-client-17
+
 
 # Add ttyd
 ADD --chmod=755 https://github.com/tsl0922/ttyd/releases/download/1.7.7/ttyd.x86_64 /usr/local/bin/ttyd
