--- a/apps/plexytrack/Dockerfile
+++ b/apps/plexytrack/Dockerfile
@@ -17,4 +17,7 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY --from=cloner /source/. .
 
+VOLUME /config
+VOLUME /state
+
 CMD ["python", "app.py"]
