--- a/apps/pulsarr/Dockerfile
+++ b/apps/pulsarr/Dockerfile
@@ -7,59 +7,78 @@ RUN apk update && apk upgrade && \
 
 RUN git clone -b $VERSION  https://github.com/jamcalli/pulsarr.git /source
 
-FROM node:23.6.0-alpine AS builder
+FROM node:22.18.0-alpine AS builder
 
 WORKDIR /app
+
+# Accept TMDB API key as build argument (GitHub Actions converts to TMDBAPIKEY)
+ARG TMDBAPIKEY
 
 # Set cache dir
 ENV CACHE_DIR=/app/build-cache
 
-# Copy build essentials
-COPY --from=cloner /source/package*.json ./
-COPY --from=cloner /source/src ./src
-COPY --from=cloner /source/vite.config.js ./
-COPY --from=cloner /source/tsconfig.json ./
-COPY --from=cloner /source/postcss.config.mjs ./
+# Set TMDB API key as environment variable in camelCase format
+ENV tmdbApiKey=${TMDBAPIKEY}
 
-# Install dependencies
-RUN npm ci
+# Copy package files first (changes less often)
+COPY package*.json ./
+COPY .npmrc ./
 
-# Build
-RUN npm run build
+# Install dependencies with cache mount
+RUN --mount=type=cache,target=/root/.npm \
+    --mount=type=cache,target=/app/.npm \
+    HUSKY=0 npm ci --prefer-offline --no-audit
 
-# Ensure cache dir
-RUN mkdir -p ${CACHE_DIR}
+# Copy build configuration files
+COPY vite.config.js tsconfig.json postcss.config.mjs ./
 
-FROM node:23.6.0-alpine
+# Copy source code (changes most often)
+COPY src ./src
+
+# Build with cache mounts
+RUN --mount=type=cache,target=/app/node_modules/.vite \
+    npm run build
+
+# Prune dev dependencies to produce production node_modules for runtime image
+RUN npm prune --omit=dev && mkdir -p ${CACHE_DIR}
+
+FROM node:22.18.0-alpine
 
 WORKDIR /app
 
 # cache dir in final
 ENV CACHE_DIR=/app/build-cache
 
-# Copy package files and install dependencies
-COPY --from=cloner /source/package*.json ./
-RUN npm ci
+# Copy package files (runtime typically does not need .npmrc)
+COPY package*.json ./
+# Reuse production dependencies from the builder image
+COPY --from=builder /app/node_modules ./node_modules
 
 # Create necessary directories
 RUN mkdir -p /app/data/db && \
     mkdir -p /app/data/log && \
     mkdir -p ${CACHE_DIR}
 
-# Copy build artifacts, config, and cache
+# Copy build artifacts
 COPY --from=builder /app/dist ./dist
-COPY --from=builder ${CACHE_DIR} ${CACHE_DIR}
-COPY --from=cloner /source/vite.config.js ./
-COPY --from=cloner /source/migrations ./migrations
-COPY --from=cloner /source/docker-entrypoint.sh ./
+COPY migrations ./migrations
+COPY docker-entrypoint.sh ./
 RUN chmod +x docker-entrypoint.sh
+
+# Copy license and documentation files for compliance
+COPY LICENSE* ./
+COPY README.md ./
+
+# Pass TMDB API key to runtime (GitHub Actions converts to TMDBAPIKEY)
+ARG TMDBAPIKEY
 
 # Set production environment
 ENV NODE_ENV=production
+ENV tmdbApiKey=${TMDBAPIKEY}
 
 # Make volumes
-VOLUME ${CACHE_DIR}
-VOLUME /app/data
+VOLUME ["/app/build-cache"]
+VOLUME ["/app/data"]
 EXPOSE 3003
 
 CMD ["./docker-entrypoint.sh"]
