un-break kometa
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/kometa/Dockerfile
+++ b/apps/kometa/Dockerfile
@@ -7,17 +7,19 @@ RUN apk update && apk upgrade && \
 
 RUN git clone -b $VERSION  https://github.com/Kometa-Team/Kometa.git /source
 
-FROM python:3.11-slim-buster
+FROM python:3-slim
 ARG BRANCH_NAME=master
-ENV BRANCH_NAME ${BRANCH_NAME}
-ENV TINI_VERSION v0.19.0
-ENV KOMETA_DOCKER True
-COPY --from=cloner /source/requirements.txt requirements.txt
+ENV BRANCH_NAME=${BRANCH_NAME}
+ENV TINI_VERSION=v0.19.0
+ENV KOMETA_DOCKER=True
+ENV LANG C.UTF-8
+ENV LC_ALL C.UTF-8
+COPY requirements.txt requirements.txt
 RUN echo "**** install system packages ****" \
  && apt-get update \
  && apt-get upgrade -y --no-install-recommends \
  && apt-get install -y tzdata --no-install-recommends \
- && apt-get install -y gcc g++ libxml2-dev libxslt-dev libz-dev libjpeg62-turbo-dev zlib1g-dev wget curl \
+ && apt-get install -y gcc g++ libxml2-dev libxslt-dev libz-dev libjpeg62-turbo-dev zlib1g-dev wget curl nano \
  && wget -O /tini https://github.com/krallin/tini/releases/download/${TINI_VERSION}/tini-"$(dpkg --print-architecture | awk -F- '{ print $NF }')" \
  && chmod +x /tini \
  && pip3 install --no-cache-dir --upgrade --requirement /requirements.txt \
