--- a/apps/overseerr/Dockerfile
+++ b/apps/overseerr/Dockerfile
@@ -11,6 +11,7 @@ RUN \
     curl \
     g++ \
     make \
+    git \
     python3 && \
   echo "**** install runtime packages ****" && \
   apk add --no-cache \
@@ -48,6 +49,8 @@ RUN \
     /tmp/* \
     /app/overseerr/.next/cache/*
 
+# Apply Plex metadata patch until it makes it into a new release
+RUN curl -L https://patch-diff.githubusercontent.com/raw/sct/overseerr/pull/4220.patch | git apply -v
 COPY ./apps/overseerr/entrypoint.sh /
 
 # ports and volumes
