use private token
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/.github/workflows/action-image-build.yaml
+++ b/.github/workflows/action-image-build.yaml
@@ -59,7 +59,7 @@ jobs:
         with:
           repository: elfhosted/containers-private
           path: containers-private
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.GH_TOKEN_CONTAINERS_PRIVATE }}
           fetch-depth: 1
 
       - name: Overlay /apps/ from external repo
