add static resources
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/aiostreams/Dockerfile
+++ b/apps/aiostreams/Dockerfile
@@ -59,7 +59,7 @@ COPY --from=builder /build/packages/server/package.*json ./packages/server/
 COPY --from=builder /build/packages/core/dist ./packages/core/dist
 COPY --from=builder /build/packages/frontend/out ./packages/frontend/out
 COPY --from=builder /build/packages/server/dist ./packages/server/dist
-
+COPY --from=builder /build/packages/server/src/static ./packages/server/dist/static
 COPY --from=builder /build/resources ./resources
 
 COPY --from=builder /build/node_modules ./node_modules
