--- a/apps/streamvix/ci/goss.yaml
+++ b/apps/streamvix/ci/goss.yaml
@@ -4,11 +4,11 @@ process:
   node:
     running: true
 
-# https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#port
-port:
-  # https://github.com/aelsabbahy/goss/issues/149
-  tcp:3000:
-    listening: true
+# # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#port
+# port:
+#   # https://github.com/aelsabbahy/goss/issues/149
+#   tcp:3000:
+#     listening: true
 
 # # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#http
 # http:
