--- a/apps/storyteller/Dockerfile
+++ b/apps/storyteller/Dockerfile
@@ -82,7 +82,7 @@ ENV SQLITE_NATIVE_BINDING=/app/node_modules/better-sqlite3/build/Release/better_
 
 RUN yarn workspaces foreach -Rpt --from @storyteller-platform/web run build
 
-FROM registry.gitlab.com/storyteller-platform/storyteller-base:latest AS runner
+FROM base AS runner
 
 WORKDIR /app
 
